Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <p>This was a project I previously worked on at ITMS at URI. It was developed for a website used by the nutrition department in their classes. It is a small 2D quiz-based game built in Actionscript3 using Flixel. Music and Art were done by co-workers.</p>
 
-<p>To check it out...</p>
+<p>To try it out...</p>
 
 <p><a href="http://protein.mts.uri.edu/MPet/GreenProj/index.php">http://protein.mts.uri.edu/MPet/GreenProj/index.php</a></p>
 
