--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <p>To try it out...</p>
 
-<p><a href="http://protein.mts.uri.edu/MPet/GreenProj/index.php">http://protein.mts.uri.edu/MPet/GreenProj/index.php</a></p>
+<p><a href="http://protein.mts.uri.edu/MPet/GreenProj/index.php">Click Here</a></p>
 
 <p><a href="http://mvpet.github.io/">Back to Main Page</a></p>
       </section>
