Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
         <h3>
 <a name="welcome-to-the-page-for-the-hunger-game" class="anchor" href="#welcome-to-the-page-for-the-hunger-game"><span class="octicon octicon-link"></span></a>Welcome to the Page for the Hunger Game</h3>
 
-<p>This was a project I previously worked on at ITMS at URI. It was developed for a website used by the nutrition department in their classes. It is a small 2D quiz-based game built in Actionscript3 using Flixel. Music and Art were done by co-workers.</p>
+<p>This was a project I previously worked on at ITMS at URI. </p>
+
+<p>The game was developed using Flixel and ActionScript3. It was developed to be used in conjunction with an educational website that teaches nutrition undergraduates about healthy eating.</p>
+
+<p>The game functions as a small "timed" quiz where students must answer the questions correctly to avoid being brainwashed by the food scientists. The player is constantly moving towards the unhealthy food and answering a question correctly pushes him towards the healthy food. If the player runs out of questions or reaches the unhealthy food they lose, otherwise if they make it tot he healthy food, they win.</p>
 
 <p>To try it out...</p>
 
