Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
 
 <p>The game functions as a small "timed" quiz where students must answer the questions correctly to avoid being brainwashed by the food scientists. The player is constantly moving towards the unhealthy food and answering a question correctly pushes him towards the healthy food. If the player runs out of questions or reaches the unhealthy food they lose, otherwise if they make it tot he healthy food, they win.</p>
 
+<p>Watch it here:</p>
+
+
+
 <p>To try it out...</p>
 
 <p><a href="http://protein.mts.uri.edu/MPet/GreenProj/index.php">Click Here</a></p>
