--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <p>Watch it here:</p>
 
-
+<iframe width="420" height="315" src="//www.youtube.com/embed/k2dzWKbVSwA" frameborder="0" allowfullscreen></iframe>
 
 <p>To try it out...</p>
 
