--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
 
 <iframe width="420" height="315" src="//www.youtube.com/embed/k2dzWKbVSwA" frameborder="0" allowfullscreen></iframe>
 
-<p>Or try it out...</p>
 
-<p><a href="http://protein.mts.uri.edu/MPet/GreenProj/index.php">Click Here</a></p>
+<p>Or try it out...<a href="http://protein.mts.uri.edu/MPet/GreenProj/index.php">Here</a></p>
 
 <p><a href="http://mvpet.github.io/">Back to Main Page</a></p>
       </section>
