--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <h3>
 <a name="welcome-to-the-page-for-the-hunger-game" class="anchor" href="#welcome-to-the-page-for-the-hunger-game"><span class="octicon octicon-link"></span></a>Welcome to the Page for the Hunger Game</h3>
 
-<p>This was a project I previously worked on at ITMS at URI. </p>
+<p>This was the first project I worked on at ITMS. </p>
 
-<p>The game was developed using Flixel and ActionScript3. It was developed to be used in conjunction with an educational website that teaches nutrition undergraduates about healthy eating.</p>
+<p>The game was developed using Flixel and ActionScript3. It was meant to be a part of an educational module about healthy eating that the nutrition department would use in classes.</p>
 
-<p>The game functions as a small "timed" quiz where students must answer the questions correctly to avoid being brainwashed by the food scientists. The player is constantly moving towards the unhealthy food and answering a question correctly pushes him towards the healthy food. If the player runs out of questions or reaches the unhealthy food they lose, otherwise if they make it tot he healthy food, they win.</p>
+<p>The game functions as a small "timed" quiz where students must answer the questions correctly to avoid being brainwashed by the food scientists. The player is constantly moving towards the bad food (left side of the screen) and each correct answer will push the player towards the healthy food (right side of the screen). An incorrect answer will have no ill effect, and will provide the player feedback by shaking the screen slightly. If the player makes it to the right side of the screen they win, if they run out of questions or reach the left side of the screen they lose.</p>
 
 <p>Watch a demo of it:</p>
 
