--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 
 <p>The game functions as a small "timed" quiz where students must answer the questions correctly to avoid being brainwashed by the food scientists. The player is constantly moving towards the bad food (left side of the screen) and each correct answer will push the player towards the healthy food (right side of the screen). An incorrect answer will have no ill effect, and will provide the player feedback by shaking the screen slightly. If the player makes it to the right side of the screen they win, if they run out of questions or reach the left side of the screen they lose.</p>
 
+<p>Art and music was done by coworkers.</p>
+
 <p>Watch a demo of it:</p>
 
 <iframe width="420" height="315" src="//www.youtube.com/embed/k2dzWKbVSwA" frameborder="0" allowfullscreen></iframe>
