--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 
 <p>Or try it out...<a href="http://protein.mts.uri.edu/MPet/GreenProj/index.php">Here</a></p>
 
+<h3>Updates:</h3>
+<pre><code>April 3, 2014
+- First commit
+  
+</code></pre>
+
 <p><a href="http://mvpet.github.io/">Back to Main Page</a></p>
       </section>
 
