--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Greeneating by MVPet</title>
+    <title>Hunger Game by MVPet</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>Greeneating</h1>
+          <h1>Hunger Game</h1>
           <p>Nutrition Flash Game</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/MVPet">MVPet</a></span>
