Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,68 +1,58 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Hunger Game by MVPet</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="description" content="Greeneating : Nutrition Flash Game">
 
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Greeneating</title>
   </head>
+
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/MVPet/GreenEating">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/MVPet/GreenEating/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/MVPet/GreenEating/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
 
-    <div class="wrapper">
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/MVPet/GreenEating">View on GitHub</a>
 
-      <section>
-        <div id="title">
-          <h1>Hunger Game</h1>
-          <p>Nutrition Flash Game</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/MVPet">MVPet</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
+          <h1 id="project_title">Greeneating</h1>
+          <h2 id="project_tagline">Nutrition Flash Game</h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/MVPet/GreenEating/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/MVPet/GreenEating/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-the-page-for-the-hunger-game" class="anchor" href="#welcome-to-the-page-for-the-hunger-game"><span class="octicon octicon-link"></span></a>Welcome to the Page for the Hunger Game</h3>
+<a id="welcome-to-the-page-for-the-hunger-game" class="anchor" href="#welcome-to-the-page-for-the-hunger-game" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the Page for the Hunger Game</h3>
 
-<p>This was the first project I worked on at ITMS. </p>
+<p>This was a project I worked on at ITMS at URI. </p>
 
-<p>The game was developed using Flixel and ActionScript3. It was meant to be a part of an educational module about healthy eating that the nutrition department would use in classes.</p>
+<p>The game was developed using Flixel and ActionScript3. It was developed to be used in conjunction with an educational website that teaches nutrition undergraduates about healthy eating.</p>
 
-<p>The game functions as a small "timed" quiz where students must answer the questions correctly to avoid being brainwashed by the food scientists. The player is constantly moving towards the bad food (left side of the screen) and each correct answer will push the player towards the healthy food (right side of the screen). An incorrect answer will have no ill effect, and will provide the player feedback by shaking the screen slightly. If the player makes it to the right side of the screen they win, if they run out of questions or reach the left side of the screen they lose.</p>
-
-<p>Art and music was done by coworkers.</p>
-
-<p>Watch a demo of it:</p>
-
-<iframe width="420" height="315" src="//www.youtube.com/embed/k2dzWKbVSwA" frameborder="0" allowfullscreen></iframe>
-
-<h3>Updates:</h3>
-<pre><code>April 3, 2014
-- First commit
-</code></pre>
+<p>The game functions as a small "timed" quiz where students must answer the questions correctly to avoid being brainwashed by the food scientists. The player is constantly moving towards the unhealthy food and answering a question correctly pushes him towards the healthy food. If the player runs out of questions or reaches the unhealthy food they lose, otherwise if they make it to the healthy food, they win.</p>
 
 <p><a href="http://mvpet.github.io/">Back to Main Page</a></p>
       </section>
-
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Greeneating maintained by <a href="https://github.com/MVPet">MVPet</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
