Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Greeneating : Nutrition Flash Game">
+    <meta name="description" content="Hunger Game : Nutrition Flash Game">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Greeneating</title>
+    <title>Hunger Game</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/MVPet/GreenEating">View on GitHub</a>
 
-          <h1 id="project_title">Greeneating</h1>
+          <h1 id="project_title">Hunger Game</h1>
           <h2 id="project_tagline">Nutrition Flash Game</h2>
 
             <section id="downloads">
@@ -47,7 +47,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Greeneating maintained by <a href="https://github.com/MVPet">MVPet</a></p>
+        <p class="copyright">Hunger Game maintained by <a href="https://github.com/MVPet">MVPet</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
