Fixed link to game in index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <p>The game functions as a small "timed" quiz where students must answer the questions correctly to avoid being brainwashed by the food scientists. The player is constantly moving towards the unhealthy food and answering a question correctly pushes him towards the healthy food. If the player runs out of questions or reaches the unhealthy food they lose, otherwise if they make it to the healthy food, they win.</p>
 
-<p><a href="http://mvpet.github.io/">Play the game here:</a></p>
+<p><a href="http://mvpet.github.io/GreenEating/game.html">Play the game here:</a></p>
 
 <p><a href="http://mvpet.github.io/">Back to Main Page</a></p>
 
