--- a/game.html
+++ b/game.html
@@ -1,3 +1,3 @@
-<object width="800" height="600" data="GreenEating.swf"></object>
+<center></center><object width="640" height="480" data="GreenEating.swf"></object></center>
 
-<p><a href="http://mvpet.github.io/GreenEating/">Back to Hunger Game Page</a></p>
+<center></center><p><a href="http://mvpet.github.io/GreenEating/">Back to Hunger Game Page</a></p></center>
