--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>This was a project I worked on at ITMS at URI. </p>
+      <p>This was a project I worked on at ITMS at URI. </p>
 
 <p>The game was developed using Flixel and ActionScript3. It was developed to be used in conjunction with an educational website that teaches food science undergraduates about healthy eating.</p>
 
 <p>The game functions as a small "timed" quiz where students must answer the questions correctly to avoid being brainwashed by the food scientists. The player is constantly moving towards the unhealthy food and answering a question correctly pushes him towards the healthy food. If the player runs out of questions or reaches the unhealthy food they lose, otherwise if they make it to the healthy food, they win.</p>
+
+<p><a href="http://mvpet.github.io/GreenEating/game.html">Play the game here:</a></p>
 
 <p><a href="http://mvpet.github.io/">Back to Main Page</a></p>
       </section>
